data/derived/fa15/progs/unify/prog0262.ml.out
Characters 116-137:
  List.fold_left f base;;
  ^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type string list -> string
       but an expression was expected of type string
